--- a/_config.yml
+++ b/_config.yml
@@ -22,5 +22,5 @@ comments:
 #analytics:
 #    provider: google
 #    google:
-#        tracking_id: 'UA-18015420-1'
-#        domain: 'in-the-attic.com'
+#        tracking_id: ''
+#        domain: ''
